<resources>
    <string name="app_name">SpotSpacer</string>
    <string name="google_maps_key" translatable="false">AIzaSyDcK667OEmfMlfq7sHaHQ_SF4L4-YS19AE</string>
    <string name="facebook_app_id" translatable="false">1072394519468451</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="next">Next</string>
    <string name="action_settings">Settings</string>
    <string name="userInfoName">User</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="favorite">Favorites</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->


    <string-array name="choices">
        <item>1 h</item>
        <item>Timed</item>
    </string-array>


    <string name="title_activity_favorites">Favorites</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_settings0">Settings</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="or_seperrator">OR</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="spotted">Spotted: </string>
    <string name="thanksText">Thanks received: </string>
    <string name="paySpotStartTime">Pay spot start time</string>
    <string name="goBut">Go</string>
    <string name="paySpotEndTime">Pay spot end time</string>
    <string name="okButt">OK</string>
    <string name="cancelButt">Cancel</string>
    <string name="locationDenied">Location Denied</string>
    <string name="accessDenied">Access Denied</string>
    <string name="unableLocation">Unable to fetch Your current location</string>
    <string name="needLogin">You need to login</string>
    <string name="spottedText">Spotted</string>
    <string name="freeAdded">Free Spot Added</string>
    <string name="connectionError">Connection unsuccessful</string>
    <string name="adSpotSpacerPro">Favorites and other features are in spot.Spacer Pro</string>
    <string name="title_activity_first_steps">FirstStepsActivity</string>
    <string name="myLocation">My Location</string>
    <string name="oneHour">Free for 1 h</string>
    <string name="twoHours">Free for 2 h</string>
    <string name="paidFromTo">Paid from-to</string>
    <string name="specifyLimit">Specify limitation:</string>
    <string name="workDays">Work Days</string>
    <string name="weekends">Weekends</string>
    <string name="always">Always</string>
    <string name="chooseLang">Please select Language</string>
    <string name="welcome">Welcome</string>
    <string name="Vieta">Location</string>
    <string name="permissionReason">To help you to find nearest parking lots we need to use GPS</string>
    <string name="letsStart">GET STARTED</string>
    <string name="allDone">All done!</string>
    <string name="langButTxt">English</string>
    <string name="pleaseAllow">You need to allow to access your Location</string>
    <string name="logInFbText">Log in with Facebook</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="address">Address</string>
    <string name="zeroTime">00:00</string>
    <string name="limitedDays">Limited</string>
    <string name="freeText">It\'s FREE</string>
    <string name="freeFor">"Free for "</string>
    <string name="internetError">No internet conection</string>
    <string name="zero" translatable="false">0</string>
    <string name="filter">Filter</string>
    <string name="addFree">Add FREE spot</string>
    <string name="addNon">Add spot</string>
    <string name="timelimitText">Time limit</string>
    <string name="dislike">dislike</string>
    <string name="like">like</string>

    <string name="selected_place">Last Selected Place:</string>
    <string name="place_details" translatable="false">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Place Id: %2$s</i>
        <br/>
        Address: %3$s
        <br/>
        Phone: %4$s
        <br/>
        Website: %5$s
        <br/>
        LatLng: %5$s
    ]]>
    </string>
    <string name="searchErr">Didn\'t find anything</string>
    <string name="lang">Language</string>





</resources>
