<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_24dp"
        android:orderInCategory="101"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/overflow"
        android:icon="@drawable/ic_add_24dp"
        android:orderInCategory="102"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_add_free"
                android:title="@string/addFree"

                />
            <item
                android:id="@+id/action_add"
                android:title="@string/addNon"

                />
        </menu>
    </item>

</menu>
