<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_vertical_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_vertical_margin"
    android:layout_marginStart="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageMarker"
            android:layout_width="48dp"
            android:layout_height="54dp"
            android:layout_marginRight="16dp"
            app:srcCompat="@drawable/pin_free"
            tools:ignore="MissingPrefix"
            tools:src="@drawable/pin_free"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textaddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|fill_vertical"
                android:singleLine="false"
                android:text="@string/address"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/cityCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="City, Country"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#cf8a8a8a" />

    <TextView
        android:id="@+id/textLimit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="8dp"
        android:text="@string/limitedDays"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/timeTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
           >

            <ImageView
                android:id="@+id/markerAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="32dp"
                android:contentDescription="@string/timelimitText"
                app:srcCompat="@drawable/ic_access_time_24dp"
                tools:ignore="MissingPrefix"
                tools:src="@drawable/ic_access_time_24dp"/>

            <RelativeLayout
                android:id="@+id/fromLines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/markerAddress"
                android:layout_toRightOf="@+id/markerAddress">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/from"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_toEndOf="@+id/textView7"
                    android:layout_toRightOf="@+id/textView7"
                    android:text="@string/zeroTime"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black" />

                <RelativeLayout
                    android:id="@+id/toLines"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView5">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|right"
                        android:layout_marginRight="8dp"
                        android:gravity="center_vertical|fill_vertical"
                        android:text="@string/to"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_gravity="left|center_vertical"
                        android:layout_toEndOf="@+id/textView6"
                        android:layout_toRightOf="@+id/textView6"
                        android:gravity="center_vertical|fill_vertical"
                        android:text="@string/zeroTime"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/black" />
                </RelativeLayout>

            </RelativeLayout>

        </RelativeLayout>

        <ImageView
            tools:ignore="MissingPrefix"
            tools:src="@drawable/ic_thumb_up_24dp"
            app:srcCompat="@drawable/ic_thumb_up_24dp"
            android:id="@+id/imageLike"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_vertical|right"
            android:layout_toLeftOf="@+id/imageDislike"
            android:clickable="true"
            android:contentDescription="@string/like"
            android:foregroundGravity="right"
            android:textAlignment="gravity"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/imageDislike"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_vertical|right"
            android:layout_marginLeft="8dp"

            android:clickable="true"
            android:contentDescription="@string/dislike"
            android:foregroundGravity="right"
            android:textAlignment="gravity"
            app:srcCompat="@drawable/ic_thumb_down_24dp"
            tools:ignore="MissingPrefix"
            tools:src="@drawable/ic_thumb_down_24dp"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/imageFav"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_vertical|right"
            android:layout_toStartOf="@+id/imageDislike"
            android:clickable="true"
            android:contentDescription="@string/like"
            android:foregroundGravity="right"
            android:textAlignment="gravity"
            app:srcCompat="@drawable/ic_favorite_24dp_no"
            tools:ignore="MissingPrefix"
            tools:src="@drawable/ic_favorite_24dp_no"
            android:layout_alignRight="@+id/timeTable" />

    </RelativeLayout>

</LinearLayout>